--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
